# Game-of-Life-ufaz

./: CMakeLists.txt  Doxyfile  README.md  main.c  test.c
board/: CMakeLists.txt  board.c  board.h
console/: CMakeLists.txt  ansi.c  ansi.h
gui/: CMakeLists.txt  gui.c  gui.h
